--- a/css/main.css
+++ b/css/main.css
@@ -9,13 +9,20 @@
   --background-color: #F5F4FA;
   --fill: #AFB1B8;
 }
-
+body,
+html {
+  overflow-x: hidden;
+  
+}
 
 
 .container {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
 
 .header .container {
@@ -81,17 +88,17 @@
 .mobil-menu {
   position: fixed;
   top: 0;
-  left: 50%;
+  left: 0;
   width: 100vw;
   height: 100vh;
   background-color: #fff;
   padding: 48px 40px;
-  transform: translateY(-100%), translateX(-50%);
-  transition: transform 250ms linear;
+  transform: translateY(-200%);
+  transition: transform 400ms linear;
 }
 
 .is-open {
-  transform: translateY(0), translateX(-50%);
+  transform: translateY(0);
 }
 
 .mobil-menu-list__li {
